--- a/index.html
+++ b/index.html
@@ -133,23 +133,20 @@
 									</ul>
 								</section>
 								<section>
-									<ul class="contact">
-										<li>
-											<h3>Repo</h3>
-											<a href="https://github.com/winstonjz/Upword" class='icon minor fa-github'></a>
+									<ul class="contact" style="display: flex; flex-direction: column; align-items: flex-end;">
+										<li style="display: flex; flex-direction: column; align-items: flex-end;">
+											<h3>Repos</h3>
+											<a href="https://github.com/winstonjz/Upword" class='icon fa-github' target="_blank"> Upword</a>
+											<a href="https://github.com/winstonjz/upword-server" class='icon fa-github' target="_blank"> Upword Server</a>
 										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+										<li style="display: flex; flex-direction: column; align-items: flex-end;">
+											<h3>Email</h3>
+											<span>winston.j.zhao@gmail.com</span>
 										</li>
-										<li>
-											<h3>Social</h3>
+										<li style="display: flex; flex-direction: column; align-items: flex-end;">
+											<h3>LinkedIn</h3>
 											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.linkedin.com/in/winstonjzhao/" class="fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
