updated description with look-upword

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 								<section>
 									<span class="icon major fa-hourglass"></span>
 									<h3>Webster API</h3>
-									<p>Upword Server makes calls to Webster API, converts XML to JSON and saves words to minimize API calls</p>
+									<p>Upword Server makes API calls through look-upword to save words to the database thus minimizing API calls</p>
 								</section>
 								<section>
 									<span class="icon major fa-chain"></span>
-									<h3>Webster-to-Json</h3>
-									<p>From converting word XML data to JSON, I'm working on create a more general NPM package and CLI tool for others to use</p>
+									<h3><a href="https://github.com/winstonjz/look-upword" target="_blank">look-upword</a></h3>
+									<p>I converted word data from XML to JSON and made an NPM package for others to use </p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -139,6 +139,7 @@
 											<h3>Repos</h3>
 											<a href="https://github.com/winstonjz/Upword" class='icon fa-github' target="_blank"> Upword</a>
 											<a href="https://github.com/winstonjz/upword-server" class='icon fa-github' target="_blank"> Upword Server</a>
+											<a href="https://github.com/winstonjz/look-upword" class='icon fa-github' target="_blank"> look-upword</a>
 										</li>
 										<li style="display: flex; flex-direction: column; align-items: flex-end;">
 											<h3>Email</h3>
