--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
+							<img src="images/upword-tabs.gif" alt="" data-position="" />
 							<h1>Upword</h1>
 							<p>by Winston Zhao<br />
 							Separates words by part of speech and definition for the most precise synonyms
